--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.fvm/flutter_sdk
+.vscode/launch.json
+android/app/google-services.json
+ios/firebase_app_id_file.json
+ios/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
+macos/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
+
 # Miscellaneous
 *.class
 *.log
