--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,42 +27,36 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.2
-  
-  stacked: ^3.2.7
-  stacked_services: ^1.0.2
-  stacked_firebase_auth: ^2.19.2
-  google_fonts: ^4.0.3
-  flutter_svg: ^2.0.6
-  simple_gradient_text: ^1.2.4
-  responsive_builder: ^0.7.0
   dio: ^5.0.0
   email_validator: ^2.1.17
-  freezed_annotation: ^2.2.0
-  json_annotation: ^4.8.0
-  url_strategy: ^0.2.0
-  cached_network_image: ^3.2.3
-  shimmer: ^3.0.0
-  flutter_animate: ^4.1.0
-  pod_player:
-    git:
-        url: https://github.com/ferrarafer/pod_player.git
-        ref: dev
   firebase_analytics: ^10.1.6
-  googleapis: ^11.1.0
-  googleapis_auth: ^1.4.0
+  firebase_core: ^2.24.0
+  flutter:
+    sdk: flutter
+  flutter_animate: ^4.1.0
+  flutter_svg: ^1.1.6
+  flutter_widget_from_html: ^0.9.1
+  freezed_annotation: ^2.2.0
+  google_fonts: ^4.0.3
+  googleapis: ^10.1.0
+  googleapis_auth: ^1.3.1
   js: ^0.6.5
+  json_annotation: ^4.7.0
   logger: ^1.3.0
+  pod_player: ^0.1.0
+  responsive_builder: ^0.7.0
+  shimmer: ^3.0.0
+  simple_gradient_text: ^1.2.4
+  stacked: ^3.2.7
+  stacked_firebase_auth: ^2.19.3
+  stacked_services: ^1.0.2
+  url_strategy: ^0.2.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,16 +64,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
-  build_runner: ^2.2.0
+  flutter_test:
+    sdk: flutter
+  freezed: ^2.3.2
+  json_serializable: null
+  mockito: ^5.1.0
 
   stacked_generator: ^1.3.3
-  mockito: ^5.1.0
-  freezed: ^2.3.2
-  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -92,15 +86,12 @@ flutter:
   assets:
     - assets/
     - assets/chapter_icons/
-    - assets/credentials/
+    # - assets/credentials/
     - assets/google_fonts/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -120,4 +111,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
